// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Resolver Correctly Resolves Applications Query 1`] = `
Object {
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Cannot query field \\"applications\\" on type \\"Query\\". Did you mean \\"application\\"?",
    },
  ],
}
`;

exports[`Application Resolver Correctly Resolves Create Application Mutation 1`] = `
Object {
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 29,
          "line": 3,
        },
      ],
      "message": "Unknown argument \\"resources\\" on field \\"Mutation.createApplication\\".",
    },
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Field \\"createApplication\\" argument \\"application\\" of type \\"[JSON]!\\" is required, but it was not provided.",
    },
  ],
}
`;

exports[`Application Resolver Correctly Resolves Single Applications Query 1`] = `
Object {
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Cannot query field \\"applications\\" on type \\"Query\\". Did you mean \\"application\\"?",
    },
  ],
}
`;
